samples/_failures_safe/1761647153_228cff_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_48686057.c: In function ‘main’:
./samples/SAFE/__tmp_48686057.c:137:12: error: missing terminating " character
  137 |     printf("Matrix Operations Program
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_48686057.c:137:5: error: expected expression at end of input
  137 |     printf("Matrix Operations Program
      |     ^~~~~~
./samples/SAFE/__tmp_48686057.c:137:5: error: expected declaration or statement at end of input
